@@ -3,6 +3,8 @@ Version 16.2.x (v16-fixes)
 
 * Selected piece in GembloQ could temporarily disappear if the rotate
   backward button was hit quickly multiple times.
+* Piece could become stuck in partially flipped state if Find Move was
+  selected multiple times in quick succession.
 * Current file name was not cleared and button New Game not enabled
   after opening a file from clipboard.
 * Avoid jumping of splashscreen icon on Android.
